objects/Jobs__c.object
<CustomObject><fields>
        <fullName>Booking_Datetime__c</fullName>
        <label>Booking Datetime</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Booking_Frequency__c</fullName>
        <label>Booking Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Company_Revenue__c</fullName>
        <formula>If( ISPICKVAL( Status__c , 'Executed'), Gross_Cost__c /2,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Employee_Revenue__c</fullName>
        <formula>If( ISPICKVAL( Status__c , 'Executed'), Gross_Cost__c /2,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Gross_Cost__c</fullName>
        <formula>Total_Cost__c  - (Total_Cost__c * (Discount__c))- Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;B</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Number_Of_Cleaners__c</fullName>
        <label>Number Of Cleaners</label>
        <summaryForeignKey>Assigned_Cleaner__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Number_Of_Cleaners__c * 180</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>This object contains all the data related to Jobs(Cost, Time, Number of cleaners etc).</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Jobs</label><nameField>
        <displayFormat>J-{0000000}</displayFormat>
        <label>Jobs Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Jobs</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Lock_Fields_once_job_is_executed</fullName>
        <active>true</active>
        <description>Lock discount fields once job is executed</description>
        <errorConditionFormula>IF((ISPICKVAL( Status__c , 'Executed') &amp;&amp; 
   (ISCHANGED( Discount__c ) || ISCHANGED(Discount_Amount__c ) ) ) ,true,false)</errorConditionFormula>
        <errorMessage>You cannot apply discount once the job is executed</errorMessage>
    </validationRules></CustomObject>